Update propagating_3d_controls and add photo_gear

--- a/index.html
+++ b/index.html
@@ -85,6 +85,11 @@
     <h2>Recent articles</h2>
     <div class="list-group">
 
+  <a class="list-group-item" href="/writing/product_reviews/photo_gear/">
+    <h4 class="list-group-item-heading">Photo gear <small>product review (November 15, 2018)</small></h4>
+    <p class="list-group-item-text">Brief comments on equipment I use to shoot</p>
+  </a>
+
   <a class="list-group-item" href="/writing/technical_articles/propagating_3d_controls/">
     <h4 class="list-group-item-heading">Integrating 3D controls to propagate desired state <small>technical article (June 3, 2018)</small></h4>
     <p class="list-group-item-text">Not-quite-inertial navigation</p>
@@ -98,11 +103,6 @@
   <a class="list-group-item" href="/writing/technical_tips/terminal_tips/">
     <h4 class="list-group-item-heading">Terminal tips <small>technical tip (April 21, 2017)</small></h4>
     <p class="list-group-item-text">Useful configs for bash and Vim</p>
-  </a>
-
-  <a class="list-group-item" href="/writing/blog/coloring_the_galaxy/">
-    <h4 class="list-group-item-heading">Coloring the galaxy <small>blog (October 20, 2013)</small></h4>
-    <p class="list-group-item-text">or: How I spend my weekends</p>
   </a>
 
 </div>
