--- a/writing/product_reviews/index.html
+++ b/writing/product_reviews/index.html
@@ -57,6 +57,11 @@
 
 <div class="list-group">
 
+  <a class="list-group-item" href="/writing/product_reviews/photo_gear/">
+    <h4 class="list-group-item-heading">Photo gear <small>November 15, 2018</small></h4>
+    <p class="list-group-item-text">Brief comments on equipment I use to shoot</p>
+  </a>
+
   <a class="list-group-item" href="/writing/product_reviews/pentax_k5_review/">
     <h4 class="list-group-item-heading">Pentax K-5 review <small>November 30, 2012</small></h4>
     <p class="list-group-item-text">My choice for an APS-C DSLR</p>
